Fix overflowing images

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,8 @@ main#content > h2 { border-bottom: 1px dotted #AAA; }
 
 main#content > p { text-align: justify; }
 
+main#content > p img { max-width: 100%; }
+
 /*
 **  Codeboxes
 */
